--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
-<h1>Pierre Bakery Vendor and Order Tracker</h1>
-<a href='/vendor/new'>Add a new Vendor</a>
-<a href='/items'>See list of Vendors</a>
+@{
+  Layout = "_Layout";
+}
+
+<h1>Welcome to the Order Tracker</h1>
+<h3><a href='/vendors'>View vendors</a></h3>
+<h3><a href='/vendors/new'>Add a new vendor</a></h3>
